creada estructura html y bases css

--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
 
-    <!-- TODO añadir un título a la página -->
+    <title>Hermes - Home</title>
     <title>PLACEHOLDER</title>
   </head>
   <body>
-    <!-- TODO añadir el esquema de la página -->
+    <header class="main-header">
+      <img class="logo" src="/public/logo.png" alt="Logo de la marca Hermes" />
+      <input
+        class="buscador"
+        type="search"
+        name="buscador"
+        id="buscador"
+        title="Buscador"
+      />
+      <button class="button login" type="button">Login</button>
+    </header>
+    <nav></nav>
+    <main></main>
+    <aside></aside>
+    <button type="button" title="switch-tema" class="switch-tema"></button>
   </body>
 </html>
