--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="main-header">
-      <img class="logo" src="/public/logo.png" alt="Logo de la marca Hermes" />
+      <img class="logo" src="/public/logo.png" alt="Logo de Hermes" />
       <input
         class="buscador"
         type="search"
@@ -18,11 +18,37 @@
         id="buscador"
         title="Buscador"
       />
-      <button class="button login" type="button">Login</button>
+      <button class="btn login" type="button">Login</button>
     </header>
-    <nav></nav>
+    <nav class="menu-container">
+      <div class="menu-content" id="menu-content">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, officiis
+        quos vitae expedita quia sunt! Sit unde corrupti esse repellat nobis
+        consequuntur mollitia harum. Tenetur mollitia ad necessitatibus
+        praesentium! Possimus. Veniam nulla molestias aliquid fuga dolorem
+        ratione tempore quasi iure, ut aliquam maiores provident ad, et officia
+        debitis consequuntur deleniti dolor ducimus adipisci temporibus
+        explicabo similique officiis, ipsam fugit. Temporibus?
+      </div>
+      <button type="button" class="btn menu-btn" id="menu-btn">MENU</button>
+    </nav>
     <main></main>
     <aside></aside>
-    <button type="button" title="switch-tema" class="switch-tema"></button>
+    <button type="button" title="switch-tema" class="switch-tema">☀️</button>
+
+    <!-- JavaScript -->
+    <script>
+      // añade los elementos del menu
+      const menuBtn = document.getElementById("menu-btn");
+      const menuContent = document.getElementById("menu-content");
+
+      /*al presionar el botón, revisa si el menu tiene la clase "hidden"
+      si la tiene, la elimina, si no, la añade*/
+      menuBtn.addEventListener("click", () => {
+        menuContent.classList.contains("hidden")
+          ? menuContent.classList.remove("hidden")
+          : menuContent.classList.add("hidden");
+      });
+    </script>
   </body>
 </html>
