--- a/publicacion05.html
+++ b/publicacion05.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
 
-    <title>monologo de segismundo</title>
+    <title>img2</title>
   </head>
   <body>
     <header class="main-header">
@@ -31,20 +31,7 @@
       </div>
       <button type="button" class="btn menu-btn" id="menu-btn">MENU</button>
     </nav>
-    <main>
-      Sueña el rey que es rey, y vive con este engaño mandando, disponiendo y
-      gobernando; y este aplauso, que recibe prestado, en el viento escribe, y
-      en cenizas le convierte la muerte, ¡desdicha fuerte! ¿Que hay quien
-      intente reinar, viendo que ha de despertar en el sueño de la muerte? Sueña
-      el rico en su riqueza, que más cuidados le ofrece; sueña el pobre que
-      padece su miseria y su pobreza; sueña el que a medrar empieza, sueña el
-      que afana y pretende, sueña el que agravia y ofende, y en el mundo, en
-      conclusión, todos sueñan lo que son, aunque ninguno lo entiende. Yo sueño
-      que estoy aquí destas prisiones cargado, y soñé que en otro estado más
-      lisonjero me vi. ¿Qué es la vida? Un frenesí. ¿Qué es la vida? Una
-      ilusión, una sombra, una ficción, y el mayor bien es pequeño: que toda la
-      vida es sueño, y los sueños, sueños son.
-    </main>
+    <main><img src="img2.jpg" /></main>
     <aside></aside>
     <button type="button" title="switch-tema" class="switch-tema">☀️</button>
 
