--- a/pages/publicacion02.html
+++ b/pages/publicacion02.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
 
     <title>Fronteras entre lo Físico e Imaginario</title>
+    <script src="/index.js" defer></script>
   </head>
   <body>
     <header class="main-header">
-      <img class="logo" src="/public/logo.png" alt="Logo de Hermes" />
+      <a href="/index.html">
+        <img class="logo" src="/public/logo.png" alt="Logo de Hermes" />
+      </a>
       <input
         class="buscador"
         type="search"
@@ -72,20 +75,5 @@
     </main>
     <aside></aside>
     <button type="button" title="switch-tema" class="switch-tema">☀️</button>
-
-    <!-- JavaScript -->
-    <script>
-      // añade los elementos del menu
-      const menuBtn = document.getElementById("menu-btn");
-      const menuContent = document.getElementById("menu-content");
-
-      /*al presionar el botón, revisa si el menu tiene la clase "hidden"
-      si la tiene, la elimina, si no, la añade*/
-      menuBtn.addEventListener("click", () => {
-        menuContent.classList.contains("hidden")
-          ? menuContent.classList.remove("hidden")
-          : menuContent.classList.add("hidden");
-      });
-    </script>
   </body>
 </html>
