--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
         ><img class="logo" src="/public/logo.png" alt="Logo de Hermes"
       /></a>
       <input
-        class="buscador"
+        class="search-bar"
         type="search"
         name="buscador"
         id="buscador"
         title="Buscador"
+        placeholder="🔍"
       />
       <button class="btn login" type="button">Login</button>
     </header>
@@ -131,10 +132,10 @@
       </div>
     </main>
     <aside class="trending-container">
-      <h2>Trending Topics</h2>
-      <a href="#">Last month</a>
-      <a href="#">Hot</a>
-      <a href="#">Newest</a>
+      <h2>trending topics</h2>
+      <a href="#">last month</a>
+      <a href="#">hot</a>
+      <a href="#">newest</a>
     </aside>
     <button
       id="theme-switch"
