--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
           </p>
           <a href="/pages/publicacion01.html" class="more">Mostrar mas</a>
           <div class="interaction-container">
-            <button class="btn interaction" type="button">👍</button>
-            <button class="btn interaction" type="button">👎</button>
+            <img
+              class="interaction"
+              src="./public/me-gusta.png"
+              alt="Imagen mostrando un corazón simbolizando un me gusta"
+            />
           </div>
         </div>
       </div>
