--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>Hermes - Home</title>
+    <script src="./index.js" defer></script>
   </head>
   <body>
     <header class="main-header">
