--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             a su comportamiento inteligente. ¿Podrían estos pájaros estar
             llevando a cabo una tradición ancestral de vigilancia?
           </p>
-          <a href="/pages/publicacion01.html" class="more">Mostrar mas</a>
+          <a href="/pages/publicacion01.html" class="more">Ver comentarios</a>
           <img
             class="interaction"
             src="./public/me-gusta.png"
