--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         name="buscador"
         id="buscador"
         title="Buscador"
-        placeholder="🔍"
+        placeholder= "Buscar.."
       />
       <button class="btn login" type="button">login</button>
     </header>
