--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
     </header>
     <nav class="menu-container">
       <div class="menu-content hidden" id="menu-content">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, officiis
-        quos vitae expedita quia sunt! Sit unde corrupti esse repellat nobis
-        consequuntur mollitia harum. Tenetur mollitia ad necessitatibus
-        praesentium! Possimus. Veniam nulla molestias aliquid fuga dolorem
-        ratione tempore quasi iure, ut aliquam maiores provident ad, et officia
-        debitis consequuntur deleniti dolor ducimus adipisci temporibus
-        explicabo similique officiis, ipsam fugit. Temporibus?
+        <h2>categorías</h2>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
       </div>
       <button type="button" class="btn menu-btn" id="menu-btn">menu</button>
     </nav>
@@ -63,7 +62,7 @@
             a su comportamiento inteligente. ¿Podrían estos pájaros estar
             llevando a cabo una tradición ancestral de vigilancia?
           </p>
-          <a href="/pages/publicacion01.html" class="more">Ver comentarios</a>
+          <a href="#" class="more">Ver comentarios</a>
           <img
             class="interaction"
             src="./public/me-gusta.png"
@@ -138,7 +137,7 @@
       title="switch-tema"
       class="switch-tema"
     >
-      ☀️
+      <img src="./public/modo_oscuro.png" alt="boton de cambio a modo oscuro" />
     </button>
   </body>
 </html>
