--- a/pages/publicacion02.html
+++ b/pages/publicacion02.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <span class="user"><a href="#">@PacoRamirez</a></span>
-      <a href="7pages/publicacion02.html">
+      <a href="./pages/publicacion02.html">
         <h2>"Explorando las Fronteras entre lo Físico e Imaginario"</h2>
       </a>
     </header>
