--- a/pages/publicacion02.html
+++ b/pages/publicacion02.html
@@ -52,6 +52,15 @@
         favoritas sobre este fascinante tema. ¿Dónde trazan ustedes la línea
         entre lo físico y lo imaginario en la filosofía?
       </p>
+      <div class="reply-content">
+        <span class="user"><a href="#">@MurphyCrybaby</a></span>
+        <p>
+          Nunca acabe de entender el motivo de molestarse en separar esa
+          fantasia de la realidad, me parece pesimista
+        </p>
+        <span class="user"><a href="#">@CapitanBigote</a></span>
+        <p>Una forma interesante de ver el mundo</p>
+      </div>
     </main>
     <aside></aside>
     <button type="button" title="switch-tema" class="switch-tema">☀️</button>
