--- a/pages/publicacion05.html
+++ b/pages/publicacion05.html
@@ -21,6 +21,12 @@
         alt='Un gato con la palabra "Empty" señalando a su cabeza, simbolizando que esta está vacía'
         src="./public/img2.jpg"
       />
+      <div class="reply-content">
+        <span class="user"><a href="#">@MurphyCrybaby</a></span>
+        <p>Literalmente yo</p>
+        <span class="user"><a href="#">@CapitanBigote</a></span>
+        <p>???</p>
+      </div>
     </main>
     <aside></aside>
     <button type="button" title="switch-tema" class="switch-tema">☀️</button>
