--- a/pages/publicacion03.html
+++ b/pages/publicacion03.html
@@ -48,6 +48,12 @@
       <p>y el mayor bien es pequeño:</p>
       <p>que toda la vida es sueño,</p>
       <p>y los sueños, sueños son.</p>
+      <div class="reply-content">
+        <span class="user"><a href="#">@MurphyCrybaby</a></span>
+        <p>Quitando la situación en la que suelta el monologo, es precioso</p>
+        <span class="user"><a href="#">@CapitanBigote</a></span>
+        <p>Un discurso maravilloso</p>
+      </div>
     </main>
     <aside></aside>
     <button type="button" title="switch-tema" class="switch-tema">☀️</button>
