--- a/index.html
+++ b/index.html
@@ -177,6 +177,12 @@
           <p>y el mayor bien es pequeño:</p>
           <p>que toda la vida es sueño,</p>
           <p>y los sueños, sueños son.</p>
+          <a href="/pages/publicacion03.html" class="more">Ver comentarios</a>
+          <img
+            class="interaction"
+            src="/public/me-gusta.png"
+            alt="Imagen mostrando un corazón simbolizando un me gusta"
+          />
         </div>
       </div>
       <hr />
@@ -193,7 +199,7 @@
             alt="Un caballero hablando con la muerte"
             src="/public/img1.jpg"
           />
-          <a href="#" class="more">Ver comentarios</a>
+          <a href="/pages/publicacion04.html" class="more">Ver comentarios</a>
           <img
             class="interaction"
             src="/public/me-gusta.png"
@@ -216,7 +222,7 @@
             alt='Un gato con la palabra "Empty" señalando a su cabeza, simbolizando que esta está vacía'
             src="/public/img2.jpg"
           />
-          <a href="#" class="more">Ver comentarios</a>
+          <a href="/pages/publicacion05.html" class="more">Ver comentarios</a>
           <img
             class="interaction"
             src="/public/me-gusta.png"
