--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
       </div>
     </main>
     <!--     Menu lateral derecho -->
+    <button
+      id="trending-btn"
+      class="trending-small-button"
+      type="button"
+    ></button>
     <aside class="trending-container">
       <h2>Trending Topics</h2>
       <a href="#">Last month</a>
