--- a/pages/publicacion01.html
+++ b/pages/publicacion01.html
@@ -78,13 +78,17 @@
         </div>
       </div>
       <div class="reply-content">
-        <span class="user"><a href="#">@MurphyCrybaby</a></span>
-        <p>Una teoría fuera de época, no?</p>
-        <span class="user"><a href="#">@CapitanBigote</a></span>
-        <p>
-          Madre, yo que tengo un nido de cuervos en el árbol frente a la ventana
-          de mi habitación...
-        </p>
+        <div class="comment">
+          <span class="user"><a href="#">@MurphyCrybaby</a></span>
+          <p>Una teoría fuera de época, no?</p>
+        </div>
+        <div class="comment">
+          <span class="user"><a href="#">@CapitanBigote</a></span>
+          <p>
+            Madre, yo que tengo un nido de cuervos en el árbol frente a la
+            ventana de mi habitación...
+          </p>
+        </div>
       </div>
     </main>
     <button
