--- a/pages/publicacion03.html
+++ b/pages/publicacion03.html
@@ -93,10 +93,15 @@
         </div>
       </div>
       <div class="reply-content">
-        <span class="user"><a href="#">@MurphyCrybaby</a></span>
-        <p>Quitando la situación en la que suelta el monologo, es precioso</p>
-        <span class="user"><a href="#">@CapitanBigote</a></span>
-        <p>Un discurso maravilloso</p>
+        <div class="comment">
+          <span class="user"><a href="#">@MurphyCrybaby</a></span>
+          <p>Quitando la situación en la que suelta el monologo, es precioso</p>
+        </div>
+        <div class="comment">
+          <span class="user"><a href="#">@CapitanBigote</a></span>
+          <p>Un discurso maravilloso</p>
+        </div>
+      </div>
     </main>
     <button
       id="trending-btn"
