--- a/pages/publicacion04.html
+++ b/pages/publicacion04.html
@@ -65,13 +65,17 @@
             alt="Imagen mostrando un corazón simbolizando un me gusta"
           />
           <div class="reply-content">
-        <span class="user"><a href="#">@MurphyCrybaby</a></span>
-        <p>Una temática gastada</p>
-        <span class="user"><a href="#">@CapitanBigote</a></span>
-        <p>
-          Siempre que veo este tipo de cosas pienso en que debían sentir antes
-          de la batalla
-        </p>
+        <div class="comment">
+          <span class="user"><a href="#">@MurphyCrybaby</a></span>
+          <p>Una temática gastada</p>
+        </div>
+        <div class="comment">
+          <span class="user"><a href="#">@CapitanBigote</a></span>
+          <p>
+            Siempre que veo este tipo de cosas pienso en que debían sentir antes
+            de la batalla
+          </p>
+        </div>
         </div>
       </div>
     </main>
