--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
     </main>
     <!--     Menu lateral derecho -->
     <button
+      aria-label="boton que muestra u oculta la barra de trending"
       id="trending-btn"
       class="trending-small-button"
       type="button"
