--- a/pages/publicacion02.html
+++ b/pages/publicacion02.html
@@ -97,21 +97,23 @@
           />
         </div>
       </div>
-      <div class="reply-content">
-        <div class="comment">
-          <span class="user"><a href="#">@MurphyCrybaby</a></span>
-          <p>
-            Nunca acabe de entender el motivo de molestarse en separar esa
-            fantasia de la realidad, me parece pesimista
-          </p>
-        </div>
-        <div class="comment">
-          <span class="user"><a href="#">@CapitanBigote</a></span>
-          <p>Una forma interesante de ver el mundo</p>
-        </div>
-      </div>
     </main>
+    <div class="reply-content">
+      <h2>Comentarios:</h2>
+      <div class="comment">
+        <span class="user"><a href="#">@MurphyCrybaby</a></span>
+        <p>
+          Nunca acabe de entender el motivo de molestarse en separar esa
+          fantasia de la realidad, me parece pesimista
+        </p>
+      </div>
+      <div class="comment">
+        <span class="user"><a href="#">@CapitanBigote</a></span>
+        <p>Una forma interesante de ver el mundo</p>
+      </div>
+    </div>
     <button
+      aria-label="boton que muestra u oculta la barra de trending"
       id="trending-btn"
       class="trending-small-button"
       type="button"
