--- a/pages/publicacion03.html
+++ b/pages/publicacion03.html
@@ -92,18 +92,20 @@
           />
         </div>
       </div>
-      <div class="reply-content">
-        <div class="comment">
-          <span class="user"><a href="#">@MurphyCrybaby</a></span>
-          <p>Quitando la situación en la que suelta el monologo, es precioso</p>
-        </div>
-        <div class="comment">
-          <span class="user"><a href="#">@CapitanBigote</a></span>
-          <p>Un discurso maravilloso</p>
-        </div>
-      </div>
     </main>
+    <div class="reply-content">
+      <h2>Comentarios:</h2>
+      <div class="comment">
+        <span class="user"><a href="#">@MurphyCrybaby</a></span>
+        <p>Quitando la situación en la que suelta el monologo, es precioso</p>
+      </div>
+      <div class="comment">
+        <span class="user"><a href="#">@CapitanBigote</a></span>
+        <p>Un discurso maravilloso</p>
+      </div>
+    </div>
     <button
+      aria-label="boton que muestra u oculta la barra de trending"
       id="trending-btn"
       class="trending-small-button"
       type="button"
