--- a/pages/publicacion01.html
+++ b/pages/publicacion01.html
@@ -77,21 +77,23 @@
           />
         </div>
       </div>
-      <div class="reply-content">
-        <div class="comment">
-          <span class="user"><a href="#">@MurphyCrybaby</a></span>
-          <p>Una teoría fuera de época, no?</p>
-        </div>
-        <div class="comment">
-          <span class="user"><a href="#">@CapitanBigote</a></span>
-          <p>
-            Madre, yo que tengo un nido de cuervos en el árbol frente a la
-            ventana de mi habitación...
-          </p>
-        </div>
-      </div>
     </main>
+    <div class="reply-content">
+      <h2>Comentarios:</h2>
+      <div class="comment">
+        <span class="user"><a href="#">@MurphyCrybaby</a></span>
+        <p>Una teoría fuera de época, no?</p>
+      </div>
+      <div class="comment">
+        <span class="user"><a href="#">@CapitanBigote</a></span>
+        <p>
+          Madre, yo que tengo un nido de cuervos en el árbol frente a la ventana
+          de mi habitación...
+        </p>
+      </div>
+    </div>
     <button
+      aria-label="boton que muestra u oculta la barra de trending"
       id="trending-btn"
       class="trending-small-button"
       type="button"
