--- a/pages/publicacion05.html
+++ b/pages/publicacion05.html
@@ -67,6 +67,20 @@
         </div>
       </div>
     </main>
+    <div class="reply-content">
+      <h2>Comentarios:</h2>
+      <div class="comment">
+        <span class="user"><a href="#">@MurphyCrybaby</a></span>
+        <p>
+          Nunca acabe de entender el motivo de molestarse en separar esa
+          fantasia de la realidad, me parece pesimista
+        </p>
+      </div>
+      <div class="comment">
+        <span class="user"><a href="#">@CapitanBigote</a></span>
+        <p>Una forma interesante de ver el mundo</p>
+      </div>
+    </div>
     <button
       aria-label="boton que muestra u oculta la barra de trending"
       id="trending-btn"
