--- a/pages/publicacion05.html
+++ b/pages/publicacion05.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -71,14 +71,11 @@
       <h2>Comentarios:</h2>
       <div class="comment">
         <span class="user"><a href="#">@MurphyCrybaby</a></span>
-        <p>
-          Nunca acabe de entender el motivo de molestarse en separar esa
-          fantasia de la realidad, me parece pesimista
-        </p>
+        <p>Para eso se estudia.</p>
       </div>
       <div class="comment">
         <span class="user"><a href="#">@CapitanBigote</a></span>
-        <p>Una forma interesante de ver el mundo</p>
+        <p>Jajajaja yo en la vida</p>
       </div>
     </div>
     <button
